--- a/dynamic-comp/src/app/app.component.html
+++ b/dynamic-comp/src/app/app.component.html
@@ -1,1 +1,3 @@
 <h1>Dynamic components</h1>
+<button (click)="createCompBasedOnConfig()">Create container</button>
+<ng-template #container></ng-template>
